--- a/src/components/Navbar/Navbar.scss
+++ b/src/components/Navbar/Navbar.scss
@@ -13,6 +13,9 @@
     transition: .3s;
     position: fixed;
     background-color: #242424;
+    .navbar-container {
+        padding: 20px 0;
+    }
 }
 
 .navbar-menu {
