--- a/src/components/ServicesPage/ServicesPage.scss
+++ b/src/components/ServicesPage/ServicesPage.scss
@@ -26,9 +26,13 @@
     }
 
     .services-title {
+        text-align: center;
         font-size: 5rem;
         font-weight: bold;
         color: #fff;
         z-index: 9;
+        @media (max-width: 768px) {
+            font-size: 3rem;
+        }
     }
 }
